# Ros2

./: CMakeLists.txt  Readme  setup.cfg  setup.py
config/: controllers.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gocargo/share/gocargo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gocargo/share/gocargo/cmake/: gocargoConfig-version.cmake  gocargoConfig.cmake
install/gocargo/share/gocargo/config/: backpack_2d.lua  controllers.yaml
install/gocargo/share/gocargo/environment/: ament_prefix_path.dsv  path.dsv
install/gocargo/share/gocargo/launch/: 2lidar.launch.py  2lidar.py  bringup.launch.py  robot.launch.py  spawn_only.launch.py  teleop_launch.py
install/gocargo/share/gocargo/map/: gocargo.pgm  gocargo.yaml
install/gocargo/share/gocargo/meshes/: Cam_Back_Link.STL  Cam_Front_Link.STL  IMU_Link.STL  Left_Wheel_Link.STL  Lidar_Back_Link.STL  Lidar_Front_Link.STL  Origin_link.STL  Right_Wheel_Link.STL
install/gocargo/share/gocargo/urdf/: AllPart_ROS_1.csv  AllPart_ROS_1.urdf  AllPart_ROS_1.xacro  Allpart_Ros_1.xacro  example.xacro  (+1 more)
launch/: 2lidar.launch.py  bringup.launch.py  spawn_only.launch.py  teleop_launch.py
log/: latest_build
map/: gocargo.pgm  gocargo.yaml
meshes/: Cam_Front_Link.STL  Left_Wheel_Link.STL  Lidar_Back_Link.STL  Lidar_Front_Link.STL
param/: nav2_params.yaml
urdf/: AllPart_ROS_1 (copy).xacro  AllPart_ROS_1.xacro  example.xacro
worlds/: room10.world.xml  roomgocargo.world.xml
(+15 files in other folders)
